@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfce4-power-manager-0.6.0RC1.tar.bz2 370981 RMD160 48c86aef5c9d70851599ba4376d9f23b31acba34 SHA1 2f0eb5ca84dbc38c772daee5fe3c6185189444a8 SHA256 9f7f98e83de13a388de54ac8d1d309a49228a71fb3ba22fbbe368a156da26985
-EBUILD xfce4-power-manager-0.6.0_rc1.ebuild 607 RMD160 6f6a7450c9a02868f20be9301d1df59ab93225f3 SHA1 ae1c87931a4cae2c02d19e334421c05d384c2491 SHA256 e17cb016254e73d38544c8ec5de11854f546d8682a699f93841cd7c38a02329e
-EBUILD xfce4-power-manager-9999.ebuild 567 RMD160 eef8dd3b25200eb0802228e95f43d36c126a1ca8 SHA1 a749deea40075c6b6fd611ee00bec1b8c98df7df SHA256 74fa329937ae9bfa5d5428d83466f55034f9630ee48a7bac12203021867ffdb1
-MISC ChangeLog 627 RMD160 e6f0a30d74363ce4e49e1902d684feada8990c99 SHA1 1b1972398bbb54bbbf573f9545df7f8d644d1fc0 SHA256 23957974e67ad2fb4ec0c399d4a30826effdb6b48cbe67bfd59838747a99373a
+EBUILD xfce4-power-manager-0.6.0_rc1.ebuild 624 RMD160 a0dc062124a6a5f8dbd0c56ba4720479bb58fba0 SHA1 6dfffff2f83f97ef778fe5c08358f4382062970a SHA256 0596c9a673db96818f9ce421fb83d4221ed8541a10b49e8e852821a5020c246f
+EBUILD xfce4-power-manager-9999.ebuild 584 RMD160 fa1ac22235330ac6f2ddae50b7537757c9b4deb8 SHA1 84ad1603703c98eabcd6f93a6bc8aec4cdd8f074 SHA256 a87e21b5fc6ef2f730aba1d570de26ef5be48449ae7b07f0f3fc2f542eb7b495
+MISC ChangeLog 786 RMD160 0124aa937b40aee93619a604e052cf5c1399af78 SHA1 3755bb3bcbd7f4e68412d5f8137b8c76a5561ca0 SHA256 ea5f532f412a394691f2f75b75d754026740d718023b24be5362e496cc33fa30
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXb70ACgkQKhnDs22gwa+XagCg0XMG22bTseC1+2d/2XgB+CAr
-4rgAn2Exf7B4oTP4IZOtvPTnSWgOecPM
-=rLo5
+iEYEARECAAYFAkkhtkUACgkQKhnDs22gwa8b9wCgijIF7mg/S8iWeVmf91G3RrmN
+o5oAoIsETcKNNLgLoi3cjRZIYNSDKWYc
+=5Slc
 -----END PGP SIGNATURE-----
